# svox

./: pyproject.toml  setup.py
svox/: svox.py
svox/csrc/: quantizer.cpp  rt_kernel.cu  svox_kernel.cu
svox/csrc/include/: data_spec.hpp
